<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/music_player"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/black"
        android:elevation="25dp"
        app:cardCornerRadius="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/img"
            android:scaleType="centerCrop"
            android:src="@drawable/img" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingStart="5sp"
            android:text="@string/see_you_again"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="110dp"
            tools:layout_editor_absoluteY="401dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingStart="5sp"
            android:text="@string/fast_furious_7"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="110dp"
            tools:layout_editor_absoluteY="401dp" />


    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:paddingHorizontal="12sp"
        android:progress="@color/black"
        android:thumbTint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/seekBar">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/start"
                android:scaleType="centerCrop"
                android:src="@drawable/start" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/play"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pause"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/pause"
                android:scaleType="centerCrop"
                android:src="@drawable/pause" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/pause"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/restart"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/start"
                android:scaleType="centerCrop"
                android:src="@drawable/reset" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/reset"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>